--- a/Data Visualization/cas2020_T1.ipynb
+++ b/Data Visualization/cas2020_T1.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "### The purpose to Visualize 'CAS2020_T1':\n",
-    "#### -> to multiple bar charts which represented each province ('Province' vs 'Female, Male, Total') according to the number of holders\n",
-    "#### -> to multiple bar charts which represented each province ('Province' vs 'Female') according to the number of holders\n",
-    "#### -> to multiple bar charts which represented each province ('Province' vs 'Male') according to the number of holders\n",
-    "#### -> to multiple bar charts which represented each province ('Province' vs 'Total') according to the number of holders"
+    "#### -> to show multiple bar charts which represented ('Province' vs 'Female, Male, Total') according to the number of holders\n",
+    "#### -> to show multiple bar charts which represented ('Province' vs 'Female') according to the number of holders\n",
+    "#### -> to show multiple bar charts which represented ('Province' vs 'Male') according to the number of holders\n",
+    "#### -> to show multiple bar charts which represented ('Province' vs 'Total') according to the number of holders"
    ]
   },
   {
